# hallucination-detector-gym

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  _check_schema.py  _verify_web_app.py  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  training_hallucination_detector.ipynb  training_results.json
documentation/: api_reference.md  architecture.md  reward_design.md
grpo_output/: README.md
grpo_output/final/: README.md  adapter_config.json
hallucination_detector_gym/: __init__.py  constants.py  graders.py  logging_config.py  models.py  rewards.py  tasks.py
server/: __init__.py  app.py  gradio_builder.py  hallucination_environment.py  requirements.txt
tests/: test_environment.py  test_server.py
